--- a/client/index.html
+++ b/client/index.html
@@ -3,29 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>CINEFILM</title>
+    <title>FlickCliq</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <link rel="stylesheet" href="main.css">
     <!--CSS FOR LIGHTBOX -->
-    <link href="featherlight-1.5.1/release/featherlight.min.css" type="text/css" rel="stylesheet" />
-    <script src="https://use.fontawesome.com/fa1817fa3f.js"></script>
   </head>
   <body>
-    <h1 class="title"><a href="index.html" draggable="false">CINEFILM</a></h1>
+    <h1 class="title"><a href="index.html" draggable="false">FlickCliq</a></h1>
     <form class="js-search-form" action="#">
       <label for="query"></label>
-      <input type="text" class="js-query" placeholder="Enter a movie name">
+      <input type="text" class="js-query" placeholder="Enter a movie/show name">
       <button type="submit" name="submit" class="submit" onclick="return">Search</button>
     </form>
     <div class="js-search-results">
     </div>
-    <footer class="github">
-      <a href="http://www.github.com/dotexe0"><i class="fa fa-github" aria-hidden="true" ></i></a>
-    </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-    <script src="featherlight-1.5.1/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+
     <script src="app.js"></script>
   </body>
 </html>
